Minor Change / accessibility

--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
   <!-- Begin Hero -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container">
+       <h1>SelfCare Immobilier</h1>
+      <h2>Le plaisir de realiser sois-meme ses projets, la suretés d'etre accompagné</h2>    
       <img src="./assets/img/Selfcare/sci_sans_fond.png">
-      <h1>SelfCare Immobilier</h1>
-      <h2>Le plaisir de realiser sois-meme ses projets, la suretés d'etre accompagné</h2>
+ 
     </div>
   </section><!-- End Hero -->
 
@@ -240,50 +241,61 @@
             domaines relatifs à l'immobilier.</p>
         </div>
         <div class="row" id="teacherContainer">
-
-          <div class="col-lg-6 mt-4 mt-lg-0 content clickcard">
-            <div class="member d-flex align-items-start front face">
-              <div class="pic"><img src="./assets/img/teachers/Image1.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Jeremy Tardini</h4>
-                <span>Capacities</span>
-                <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+          
+          <div class="deck__teachers">
+            <div class="deck__teachers__cards clickcard">
+              <div class="member d-flex align-items-start front face">
+                <div class="pic"><img src="./assets/img/teachers/Image1.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                  <h4>Jeremy Tardini</h4>
+                  <span>Capacities</span>
+                  <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+                  <i class="fas fa-angle-double-right"></i>
+                </div>
               </div>
-            </div>
-            <div class="member back face">
-              <h4>A propos de Jeremy</h4>
-              <p>lorem epsum .....</p>
+              <div class="member back__teachers face">
+                <h3>A propos de Jeremy</h3>
+                <p>C'est en tant que particulier que j'ai commencé a m'intéresser au marché de l'immobilier. Aujourd'hui apres de nombreux accompagnement sur des projets diversifé, je suis heureux de vous proposer mon aide.</p>
+                <i class="fas fa-angle-double-left"></i>
+              </div>
             </div>
           </div>
 
-          <div class="col-lg-6 mt-4 mt-lg-0 content clickcard">
-            <div class="member d-flex align-items-start front face">
-              <div class="pic"><img src="./assets/img/teachers/pascaline-morin.jpg" class="img-fluid" alt="">
+          <div class="deck__teachers">
+            <div class="deck__teachers__cards clickcard">
+              <div class="member d-flex align-items-start front face">
+                <div class="pic"><img src="./assets/img/teachers/pascaline-morin.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                  <h4>Pascaline Morin</h4>
+                  <span>Capacities</span>
+                  <p>J'ai fais de l'accompagnement une passion puis mon métier.</p>
+                  <i class="fas fa-angle-double-right"></i>
+                </div>
               </div>
-              <div class="member-info">
-                <h4>Pascaline Morin</h4>
-                <span>Capacities</span>
-                <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
+              <div class="member back__teachers face">
+                <h3>A propos de Pascaline</h3>
+                <p>Agissant sur une multitude de domaines, je serais vous accomapgner dans le douceur et la pédagogie. Bien que la polyvalence sois une qualité dans ce type de formation, j'ai un gout particulier pour l'aménagement.</p>
+                <i class="fas fa-angle-double-left"></i>
               </div>
-            </div>
-            <div class="member back face">
-              <h4>A propos de Pascaline</h4>
-              <p>lorem epsum .....</p>
             </div>
           </div>
 
-          <div class="col-lg-6 mt-4 content clickcard">
-            <div class="member d-flex align-items-start front face">
-              <div class="pic"><img src="./assets/img/teachers/melinda.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Melinda Sayasith</h4>
-                <span>Capacities</span>
-                <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
+          <div class="deck__teachers">
+            <div class="deck__teachers__cards clickcard">
+              <div class="member d-flex align-items-start front face">
+                <div class="pic"><img src="./assets/img/teachers/melinda.jpg" class="img-fluid" alt=""></div>
+                <div class="member-info">
+                  <h4>Melinda Sayasith</h4>
+                  <span>Capacities</span>
+                  <p>L'organisation est mon point fort.</p>
+                  <i class="fas fa-angle-double-right"></i>
+                </div>
               </div>
-            </div>
-            <div class="member back face">
-              <h4>A propos de Melinda</h4>
-              <p>lorem epsum .....</p>
+              <div class="member back__teachers face">
+                <h3>A propos de Melinda</h3>
+                <p>Qu'il s'aggisse de préparation, de vente ou de suivie de dossier. Je suis la pour vous aider à mettre en place le plan d'action de votre projet. Je serai ravie de vous aider a structuré la vente de votre bien.</p>
+                <i class="fas fa-angle-double-left"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -311,13 +323,13 @@
                   <h3>Essentiel</h3>
                   <h4>Pack</h4>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, totam velit? Iure nemo labore inventore?</p>
-                  <span>Read more...</span>
+                  <span><i class="fas fa-angle-double-right"></i></span>
                 </div>
                 <div class="back__pack face">
                   <h3>Essentiel</h3>
                   <h4>Details</h4>
                   <p>Les fondations d'une vente immobilière</p>
-                  <span>Flip me...</span>
+                  <span><i class="fas fa-angle-double-left"></i></span>
                 </div>
               </div>
             </div>
@@ -331,7 +343,7 @@
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, totam velit?
                     Iure
                     nemo labore inventore?</p>
-                    <span>Read more...</span>
+                    <span><i class="fas fa-angle-double-right"></i></span>
                 </div>
                 <div class="back__pack face">
                   <h3>Confiance</h3>
@@ -340,7 +352,7 @@
                   <div>
                     <i></i>
                   </div>
-                  <span>Flip me...</span>
+                  <span><i class="fas fa-angle-double-left"></i></span>
                 </div>
               </div>
             </div>
@@ -353,13 +365,13 @@
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, totam velit?
                     Iure
                     nemo labore inventore?</p>
-                    <span>Read more...</span>
+                    <span><i class="fas fa-angle-double-right"></i></span>
                 </div>
                 <div class="back__pack face">
                   <h3>Sérénité</h3>
                   <h4>Details</h4>
                   <p>Une formation clé en main pour des projets reussis</p>
-                  <span>Flip me...</span>
+                  <span><i class="fas fa-angle-double-left"></i></span>
                 </div>
               </div>
             </div>
@@ -574,65 +586,71 @@
           consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
           in iste officiis commodi quidem hic quas.</p>
       </div>
-      <div class="d-flex flex-wrap contacts">
-        <div class="cardContact">
-          <h5 class="title">Secteur d'activité</h5>
-          <i class="far fa-paper-plane"></i>
-          <div class="bar">
-            <div class="emptybar"></div>
-            <div class="filledbar"></div>
+      <div class="d-flex flex-wrap justify-content-center">
+        <div class="contacts">
+          <div class="cardContact">
+            <h5 class="title">Secteur d'activité</h5>
+            <i class="far fa-paper-plane"></i>
+            <div class="bar">
+              <div class="emptybar"></div>
+              <div class="filledbar"></div>
+            </div>
+            <div class="bar2">
+              <div class="emptybar"></div>
+              <div class="filledbar2"></div>
+            </div>
+            <div class="text">
+              <p>Clermont-ferrand</p>
+              <p>et périphérie ...</p>            
+            </div>
           </div>
-          <div class="bar2">
-            <div class="emptybar"></div>
-            <div class="filledbar2"></div>
+          <div class="cardContact">
+            <h5 class="title">Email</h5>
+            <i class="far fa-envelope-open"></i>
+            <div class="bar">
+              <div class="emptybar"></div>
+              <div class="filledbar"></div>
+            </div>
+            <div class="bar2">
+              <div class="emptybar"></div>
+              <div class="filledbar2"></div>
+            </div>
+            <div class="text">
+              <p class="email_p">contact@selfcareimmobilier.fr</p>            
+            </div>
+            <a href="mailto:jeremy.tardini@gmail.com">Contact</a>
           </div>
-          <div class="text">
-            <p>Clermont-ferrand</p>
-            <p>et périphérie ...</p>            
+          <div class="cardContact">
+            <h5 class="title">Téléphone</h5>
+            <i class="fas fa-mobile-alt"></i>
+            <div class="bar">
+              <div class="emptybar"></div>
+              <div class="filledbar"></div>
+            </div>
+            <div class="bar2">
+              <div class="emptybar"></div>
+              <div class="filledbar2"></div>
+            </div>
+            <div class="text">
+              <p>06.38.36.94.14</p>            
+            </div>
+            <a href="tel:0638369414">Nous appeller</a>
           </div>
         </div>
-        <div class="cardContact">
-          <h5 class="title">Email</h5>
-          <i class="far fa-envelope-open"></i>
-          <div class="bar">
-            <div class="emptybar"></div>
-            <div class="filledbar"></div>
-          </div>
-          <div class="bar2">
-            <div class="emptybar"></div>
-            <div class="filledbar2"></div>
-          </div>
-          <div class="text">
-            <p class="email_p">contact@selfcareimmobilier.fr</p>            
-          </div>
-          <button type="button">Contact</button>
+        <div class="cardForm">
+          <form class="form">
+            <h5>Nous envoyer un mail</h5>
+            <p type="Name:"><input placeholder="Votre nom"></input></p>
+            <p type="Email:"><input placeholder="Afin de vous recontacter"></input></p>
+            <p type="Message:"><input placeholder="Quel est votre projet ?"></input></p>
+            <button>Send Message</button>
+          </form>
         </div>
-        <div class="cardContact">
-          <h5 class="title">Téléphone</h5>
-          <i class="fas fa-mobile-alt"></i>
-          <div class="bar">
-            <div class="emptybar"></div>
-            <div class="filledbar"></div>
-          </div>
-          <div class="bar2">
-            <div class="emptybar"></div>
-            <div class="filledbar2"></div>
-          </div>
-          <div class="text">
-            <p>06.38.36.94.14</p>            
-          </div>
-          <a href="tel:0638369414">Nous appeller</a>
-        </div>
+
+
+
       </div>
-      <div class="cardForm">
-        <form class="form">
-          <h5>Nous envoyer un mail</h5>
-          <p type="Name:"><input placeholder="Votre nom"></input></p>
-          <p type="Email:"><input placeholder="Afin de vous recontacter"></input></p>
-          <p type="Message:"><input placeholder="Quel est votre projet ?"></input></p>
-          <button>Send Message</button>
-        </form>
-      </div>
+      
     </section>
 
   </main><!-- End #main -->
